@@ -7,7 +7,7 @@
 # keep this aligned with SVN update version
 # major revision is the SVN update, minor revision is an internal build number which
 # can be used to keep track of different version which are not submitted to SVN
-buildversion=111.2
+buildversion=113.2
 
 year=2010
 name=SemanticTurkey
